--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,8 @@ jobs:
     docker:
       # specify the version
       - image: circleci/golang:1.11
+        environment:
+          GO111MODULE: "ON"
 
     #### TEMPLATE_NOTE: go expects specific checkout path representing url
     #### expecting it in the form of
@@ -17,5 +19,6 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
+      - run: go mod init
       - run: go mod tidy
       - run: go test all
