Go module support

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,12 @@ jobs:
     docker:
       # specify the version
       - image: circleci/golang:1.11
-        environment:
-          GO111MODULE: "ON"
 
     #### TEMPLATE_NOTE: go expects specific checkout path representing url
     #### expecting it in the form of
     ####   /go/src/github.com/circleci/go-tool
     ####   /go/src/bitbucket.org/circleci/go-tool
-    working_directory: /go/src/github.com/xlebenny/ologger
+    working_directory: ~/github.com/xlebenny/ologger
     steps:
       - checkout
 
