--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,4 +18,4 @@ jobs:
 
       # specify any bash command here prefixed with `run: `
       - run: go mod tidy
-      - run: go test all
+      - run: go test
